Markdown and css

--- a/config/database.yml
+++ b/config/database.yml
@@ -3,7 +3,7 @@ development:
   database: alsstuff_dev_two
   username: postgres
   password: thisisit05
-  host: localhost
+  host: 127.0.0.1
   pool: 5
   timeout: 5000
 
